# fakecheck

./: README.md
backend/fakecheck/: pyproject.toml
backend/fakecheck/fakecheck/: main.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
