[tool.poetry]
name = "fakecheck"
version = "0.1.0"
description = ""
authors = ["lonehegelian <thelonehegelian@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.11.1"
llama-index-llms-anthropic = "^0.2.1"
duckduckgo-search = "^6.2.11"
llama-index-readers-web = "^0.2.1"
html2text = "^2024.2.26"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
